chore: Ignore the generated code file(*.gen.go, *.pb.go, *_grpc.pb.go)
