# user/protos/openapi_types.gen.go
@@ -1,75 +1,0 @@
-// Package protos provides primitives to interact with the openapi HTTP API.
-//
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.2.0 DO NOT EDIT.
-package protos
-
-import (
-	"time"
-
-	openapi_types "github.com/oapi-codegen/runtime/types"
-)
-
-const (
-	BearerAuthScopes = "BearerAuth.Scopes"
-)
-
-// Defines values for UserInfoStatus.
-const (
-	N0 UserInfoStatus = 0
-	N1 UserInfoStatus = 1
-	N2 UserInfoStatus = 2
-)
-
-// ErrorResponse Error response with details about what went wrong
-type ErrorResponse struct {
-	// Code Business error code
-	Code int `json:"code"`
-
-	// Data Always null for error responses
-	Data *map[string]interface{} `json:"data"`
-
-	// Message Human-readable error description
-	Message string `json:"message"`
-}
-
-// UserInfo Core profile information of the user
-type UserInfo struct {
-	// Avatar URL of the user's avatar image
-	Avatar *string `json:"avatar,omitempty"`
-
-	// CreatedAt Timestamp when the user account was created
-	CreatedAt *time.Time `json:"created_at,omitempty"`
-
-	// Email Email address of the user
-	Email *openapi_types.Email `json:"email,omitempty"`
-
-	// Id Unique identifier of the user
-	Id openapi_types.UUID `json:"id"`
-
-	// Nickname Display name of the user
-	Nickname *string `json:"nickname,omitempty"`
-
-	// Phone Phone number of the user (may be partially masked)
-	Phone *string `json:"phone,omitempty"`
-
-	// Status Account status code. 0 = disabled, 1 = active, 2 = locked
-	Status UserInfoStatus `json:"status"`
-
-	// Username Login username of the user
-	Username string `json:"username"`
-}
-
-// UserInfoStatus Account status code. 0 = disabled, 1 = active, 2 = locked
-type UserInfoStatus int
-
-// UserInfoResponse Standard API response containing user info data
-type UserInfoResponse struct {
-	// Code Business status code. 0 indicates success; non-zero values indicate specific errors.
-	Code int `json:"code"`
-
-	// Data Core profile information of the user
-	Data UserInfo `json:"data"`
-
-	// Message Human-readable status message
-	Message string `json:"message"`
-}
